[project]
name = "math-problem-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "bleach-whitelist>=0.0.11",
    "django>=5.2.1",
    "markdown>=3.8",
    "pymdown-extensions>=10.15",
]

[tool.ruff]
extend-exclude = ["migrations"]

[dependency-groups]
dev = [
    "django-livereload-server>=0.5.1",
    "ruff>=0.11.9",
]
