[project]
name = "math-problem-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "bleach-allowlist>=1.0.3",
    "django>=5.2.1",
    "django-debug-toolbar>=5.2.0",
    "django-simple-captcha>=0.6.2",
    "markdown>=3.8",
    "pymdown-extensions>=10.15",
    "python-frontmatter>=1.1.0",
]

[tool.ruff]
extend-exclude = ["migrations"]

[tool.djlint]
blank_line_after_tag="load,endblock,extends"
ignore="H023,H021"
custom_blocks="problem_list,regroup"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]



[dependency-groups]
dev = [
    "django-livereload-server>=0.5.1",
    "djlint>=1.36.4",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.9",
]

